--- a/anuncio/package.json
+++ b/anuncio/package.json
@@ -5,12 +5,14 @@
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "lint": "vue-cli-service lint",
+    "backend": "json-server --watch dataBase/db.json"
   },
   "dependencies": {
     "chart.js": "^3.9.1",
     "core-js": "^3.8.3",
     "express": "^4.18.2",
+    "json-server": "^0.17.1",
     "vue": "^3.2.13",
     "vue-chartjs": "^4.1.2"
   },
